[gd_scene load_steps=15 format=3 uid="uid://dkfmot3ce0ev3"]

[ext_resource type="Script" path="res://Scripts/Shadow.gd" id="1_xttev"]
[ext_resource type="FontFile" uid="uid://ci60w53hdbiqe" path="res://Art/Fonts/m3x6.ttf" id="2_sf2ko"]
[ext_resource type="Texture2D" uid="uid://oh81swpgf8tv" path="res://Art/Sprites/WaterGuyIdle.png" id="3_75ejl"]
[ext_resource type="AudioStream" uid="uid://climcpy7gbpcl" path="res://Art/Audio/BattleSceneSFX/Victory.wav" id="4_gbhbb"]
[ext_resource type="AudioStream" uid="uid://cobddu2k35y00" path="res://Art/Audio/BattleSceneSFX/BattleSequence.wav" id="5_y241i"]
[ext_resource type="AudioStream" uid="uid://qeidv7slohxa" path="res://Art/Audio/BattleSceneSFX/Defeat.wav" id="6_mecfw"]

[sub_resource type="LabelSettings" id="LabelSettings_3vjd0"]
font = ExtResource("2_sf2ko")
font_size = 34

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rfj44"]
radius = 12.0
height = 44.0

[sub_resource type="AtlasTexture" id="AtlasTexture_im5md"]
atlas = ExtResource("3_75ejl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gengd"]
atlas = ExtResource("3_75ejl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvgtg"]
atlas = ExtResource("3_75ejl")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpepx"]
atlas = ExtResource("3_75ejl")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_tmspt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_im5md")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gengd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvgtg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpepx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_k5w52"]
cull_mode = 2
polygon = PackedVector2Array(3, -8, 6.5, -4, 7.5, 3.5, 4.5, 10, -1.5, 10.5, -6, 4, -4.5, -6, -1, -8.5)

[node name="FBLAqua Spirit" type="StaticBody2D"]
position = Vector2(379, 224)
script = ExtResource("1_xttev")
level = 3
enemyName = "FBLAqua Spirit"
metadata/_edit_group_ = true

[node name="Name" type="Label" parent="."]
offset_left = -41.0
offset_top = -82.0
offset_right = 43.0
offset_bottom = -54.0
text = "Water"
label_settings = SubResource("LabelSettings_3vjd0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name2" type="Label" parent="."]
offset_left = -41.0
offset_top = -56.0
offset_right = 43.0
offset_bottom = -28.0
text = "Lvl ...."
label_settings = SubResource("LabelSettings_3vjd0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_rfj44")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_tmspt")
autoplay = "default"

[node name="LightOccluder2D" type="LightOccluder2D" parent="AnimatedSprite2D"]
occluder = SubResource("OccluderPolygon2D_k5w52")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_rfj44")

[node name="Music" type="Node" parent="."]

[node name="Victory" type="AudioStreamPlayer2D" parent="Music"]
stream = ExtResource("4_gbhbb")

[node name="BattleStart" type="AudioStreamPlayer2D" parent="Music"]
stream = ExtResource("5_y241i")

[node name="Defeat" type="AudioStreamPlayer2D" parent="Music"]
stream = ExtResource("6_mecfw")

[connection signal="body_shape_entered" from="Area2D" to="." method="_on_area_2d_body_shape_entered"]
